--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
-<body class="bg-yellow-500">
+<body>
     <hi class="text-black">hi</hi>
 </body>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
