--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 <body>
-    <hi class="text-black">hi</hi>
+    <h1 class="text-black">hi</h1>
     <h2 class="text-blue">Portfolio</h2>
 </body>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
