Changes in the Background

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
-<body class"bg-gray-300">
+<body class="bg-gray-300">
     <h1 class="text-black">hi</h1>
     <h2 class="text-blue">Portfolio</h2>
 </body>
