--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <body class="bg-gray-300">
     <h1 class="text-black">hi</h1>
     <h2 class="text-blue">Portfolio</h2>
+    <p class="text-red">Services</p>
 </body>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
