--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 <body class="bg-gray-300">
     <h1 class="text-black">hi</h1>
     <h2 class="text-blue">Portfolio</h2>
+    <h3>About me</h3>
+    
     <p class="text-red">Services</p>
 </body>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
