--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <h1 class="text-black">hi</h1>
     <h2 class="text-blue">Portfolio</h2>
     <h3>About me</h3>
-    
+    <p>My Name is Jasmin, Im a Graphic Designer and Social Media Specialist</p>
     <p class="text-red">Services</p>
 </body>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
