--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <h2 class="text-blue">Portfolio</h2>
     <h3>About me</h3>
     <p>My Name is Jasmin, Im a Graphic Designer and Social Media Specialist</p>
-    <p class="text-red">Services</p>
+    <h3 class="text-red">Services</h3>
 </body>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
