--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
     <h3>About me</h3>
     <p>My Name is Jasmin, Im a Graphic Designer and Social Media Specialist</p>
     <h3 class="text-red">Services</h3>
+    <ul>
+        <li>Website Design and Creation</li>
+        <li>Social Media Management</li>
+        <li>Content Creation</li>
+        <li>Marketing Strategist</li>
+    </ul>
 </body>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
